styles/Navbar.module.scss
#navbar {
  @apply relative flex items-center justify-between border-b border-solid border-black border-opacity-10 px-8 py-4 font-medium
  tracking-[-0.02em] lg:py-6 lg:px-12 xl:py-10 xl:px-[5%];
  button {
    @apply h-8 w-8 lg:hidden;
    img {
      @apply h-full w-full;
    }
  }
  .mobile-nav {
    @apply absolute left-[5%] top-[-600%] flex w-[90%] flex-col items-center gap-6 rounded-2xl border-2 border-solid border-black
    border-opacity-10 bg-brightBlue p-12 text-center transition-all duration-300
    lg:hidden;
    &.active {
      @apply top-[115%];
    }
    div:nth-child(1) {
      @apply flex flex-col gap-3;
    }
    div:nth-child(2) {
      @apply flex items-center gap-4;
    }
  }
  .desktop-nav {
    @apply hidden gap-[3.75rem] transition-all duration-300 hover:opacity-70 lg:flex;
  }
  .desktop-social {
    @apply hidden gap-10 transition-all duration-300 hover:opacity-70 lg:flex;
  }
}

